init access token & singin/isauth
