# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Account\AuthController;
 use App\Http\Controllers\Account\UserController;
 use Illuminate\Support\Facades\Route;
 
@@ -8,3 +9,6 @@ Route::get('/user/{id}', [UserController::class, 'show']);
 Route::post('/user', [UserController::class, 'store']);
 Route::put('/user/{id}', [UserController::class, 'update']);
 Route::delete('/user/{id}', [UserController::class, 'destroy']);
+
+Route::post('/auth/signin', [AuthController::class, 'signin']);
+Route::get('/auth/isauth', [AuthController::class, 'isauth']);
